fixed less gaps between segments due to content overflow

--- a/src/cards.css
+++ b/src/cards.css
@@ -20,6 +20,6 @@
 }
 .long-card-item img{
     width: 200px;
-    height: 200px;
+    height: 240px;
     /* height: -webkit-fill-available; */
 }
